# ncnn-android-yolov7

./: .gitignore  README.md  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov7-tiny.param
app/src/main/java/com/tencent/ncnnyolov7/: MainActivity.java  NcnnYolov7.java
app/src/main/jni/: CMakeLists.txt  yolo.cpp  yolo.h  yoloncnn.cpp
app/src/main/res/values/: strings.xml
